--- a/login.html
+++ b/login.html
@@ -22,7 +22,7 @@
       <form action="pagina.html" method="GET">
         <label for="city">Escolha a Cidade</label>
         <select id="city" name="city" required>
-          <option value="selecione" disabled selected>Selecione</option>
+          <option value="" disabled selected>Selecione</option>
           <option value="quixada">Quixadá</option>
         </select>
         <button type="submit">Acessar</button>
